--- a/gallery.html
+++ b/gallery.html
@@ -1,54 +1,217 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
- <meta charset="utf-8">
- <title>Gallery</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.2.1/css/lightgallery.css" rel='stylesheet'>
- <link href='style.css' rel='stylesheet'>
- <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.2.1/js/lightgallery.js"></script>
- <script type="text/javascript">
-    $(document).ready(function() {
-        $("#lightgallery").lightGallery(); 
-    });
-</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta charset="utf-8">
+	<title>Mikeala Francis</title>
+
+	<!--CSS-->
+	<link rel="stylesheet" href="css/linearicons.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" href="https://use.typekit.net/rcr7xrb.css">
+
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="js/main.js"></script>
 </head>
-<header><img src="http://i.imgur.com/oxe5AAK.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
-<h2>A girl who simply enjoys the creative things in life.</h2>
-<h1>Gallery</h1>
-<div class="nav">
-    <div class="container">
-    <ul class="pull-right">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li> 
-      <li><a href="contact.html">Contact</a></li> 
-      <li><a href="pricing.html">Prices</a></li> 
-      <li><a href="gallery.html">Gallery</a></li> 
-    </ul>
-  </div>
-</nav>
+<body>
+	<!--Header Section-->
+	<header>
+		<a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a>
+		<h1 class="header">Mikeala Francis</h1>
+		<nav class="main">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html#about">About</a></li>
+				<li><a href="index.html#skills">Skills</a></li>
+				<li><a href="portfolio-2.html#portfolio">Portfolio</a></li>
+				<li><a href="index.html#contact">Contact</a></li>
+				
+			</ul>
+		</nav>
+	</header>
+	<!--End Header Section-->
+	<!--Start Animation Section-->
+	<div id="cat-section">
+		<div class="container">
+			<a name="animations"><h2>Animations/Videos</h2></a>
+			<div class="img-row">
+				<div class="col-lg-3 -sm-6">
+					<video width="270px" height="600px" autoplay controls loop>
+				<source src="img/enigma.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+			</video>
+				</div>
+				<div class="col-lg-3 -sm-6">
+					<video width="270px" height="600px" autoplay controls loop>
+				<source src="img/royal-tour.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
+				</div>
+				<div class="col-lg-3 -sm-6">
+					<video width="270px" height="600px" autoplay controls loop>
+				<source src="img/commercial.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
+				</div>
+				<div class="col-lg-3 -sm-6">
+					<video width="270px" height="600px" autoplay controls loop>
+				<source src="img/perfect.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
+				</div>
+			</div>
+			<div class="col-lg-12">
+				<div class="disclaimer">
+					<h5>I DO NOT OWN THE RIGHTS TO THE SONGS IN THE VIDEO</h5>
+				</div>
+			</div>	
+		</div>
+	</div>
 
-</header>
+	<!--Start Photography Section-->
+	<div id="photo-section">
+		<div class="container">
+			<a name="photography"><h2>Photography</h2></a>
+			<div class="photo-row top">
+				<div class="col-lg-3 -sm-6">
+					<img src="img/pink-flowers.jpg" class="photo">
+					<div class="caption">
+						<h3>Pink Flowers</h3>
+						<p>Macro Photography</p>
+					</div>
+				</div>
+				<div class="col-lg-3 -sm-6">
+					<img src="img/blue-ripple.jpg" class="photo">
+					<div class="caption">
+						<h3>Light in the Water</h3>
+						<p>Shot with Iphone 6S</p>
+					</div>
+				</div>
+				<div class="col-lg-3 -sm-6">
+					<img src="img/latina-1.jpg" class="photo">
+					<div class="caption">
+						<h3>Miami Breeze</h3>
+						<p>Lighting</p>
+					</div>
+				</div>	
+				<div class="col-lg-3 -sm-6">
+					<img src="img/white-plant.jpg" class="photo">
+					<div class="caption">
+						<h3>Albino Corn Plant</h3>
+						<p>Macro Photography</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-  <div id="lightgallery">
-   <a href="http://i.imgur.com/8xorC2w.gif">
-  <img src="http://i.imgur.com/8xorC2w.gif" alt="blue" title="Flowers"> 
- </a>
-  <a href="http://i.imgur.com/GaIFM8c.gif">
-   <img src="http://i.imgur.com/GaIFM8c.gif" alt="Madonna & Lady Gaga" title="The Royal Show">
-  </a>
-    <a href="http://i.imgur.com/2WjpJWY.gif">
-   <img src="http://i.imgur.com/2WjpJWY.gif" alt="Champagne" title="Champagne Bottle">
-  </a>
-  <a href="http://i.imgur.com/WG2WMTZ.gif">
-   <img src="http://i.imgur.com/WG2WMTZ.gif" alt="Marilyn" title="High Heels"> 
-  </a>
-   </ul>
+	<!--Start Print Material Section-->
+	<div id="print-section">
+		<div class="container">
+			<a name="print"><h2>Print Material</h2></a>
+			<div class="img-row">
+				<div class="col-md-4 .offset-md-2">
+					<img src="img/inova.jpg" class="img">
+				</div>
+				<div class="col-md-6">
+					<div class="description">
+						<h2>Inova Magazine</h2>
+						<p>Inova Magazine is a high-fashion magazine for women ages 30-45 that enjoy the finer things in life. It's for the women that are constantly breaking barriers in all aspects of their lives.<br><br><strong>Designed for Advanced Layout Design</strong></p>
+					</div>
+				</div>	
+			</div>	
+		</div>
+	</div>
+	<br><br>
+	<div id="print-section">
+		<div class="container">
+			<div class="img-row">
+				<div class="col-md-4 .offset-md-2">
+					<img src="img/serenity.jpg" class="img">
+				</div>
+				<div class="col-md-6">
+					<div class="description">
+						<h2>Serenity Spa Brochure</h2>
+						<p>Serenity Spa is beauty spa for women ages 35-45 who believe in the concept of devloping a healthy mind,body and spirit. <br><br><strong>Designed for Intermediate Layout.</strong> </p>
+					</div>
+				</div>	
+			</div>	
+		</div>
+	</div>
 
-  ...
-</div>
-<footer> <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a></footer>
+	<div id="print-section">
+		<div class="container">
+			<div class="img-row">
+				<div class="col-md-4 .offset-md-2">
+					<img src="img/minotaur.jpg" class="img">
+				</div>
+				<div class="col-md-6">
+					<div class="description">
+						<h2>Minotaur Publishing</h2>
+						<p><strong>Assignment:</strong>Rebrand an existing company by providing a range of new logo design options and color schemes as well as offer new identity pieces.<br><br><strong>Designed for Graphic Symbolism.</strong> </p>
+					</div>
+				</div>	
+			</div>	
+		</div>
+	</div>
+	<div id="print-section">
+		<div class="container">
+			<div class="img-row">
+				<div class="col-md-4 .offset-md-2">
+					<img src="img/hope.jpg" class="img">
+				</div>
+				<div class="col-md-6">
+					<div class="description">
+						<h2>Hope Movement Brochure</h2>
+						<p><strong>Assignment:</strong> Develop an informative and inspiring campaign about the unification of women with high-profile careers and motherhood
+							<br><br><strong>Designed for Rapid Visualizations.</strong> 
+						</p>
+					</div>
+				</div>	
+			</div>	
+		</div>
+	</div>
+	
+	<!--Start Vector Illustration Section-->
+	<div id="vector-section">
+		<div class="container">
+			<a name="vector"><h2>Vector Illustrations</h2></a>
+			<div class="img-row">
+				<div class="col-lg-3 -sm-6">
+					<img src="img/heels.jpg" class="vector">
+				</div>
+				<div class="col-lg-3 -sm-6">
+					<img src="img/coffee-cup.jpg" class="vector">
+				</div>
+				<div class="col-lg-3 -sm-6">
+					<img src="img/guitar.jpg" class="vector">
+				</div>
+				<div class="col-lg-3 -sm-6">
+					<img src="img/tongue-out.jpg" class="vector">
+				</div>
+			</div>	
+		</div>
+	</div>
+
+	<!--Footer Section-->
+	<footer>
+		<div class="container">
+			<div class="row">
+				<p class="copyright">Copyright &copyMikealaFrancis 2018 | ALL RIGHTS RESERVED</p>
+			</div>
+		</div>
+	</footer>
+	<!--End Footer Section-->
+
+
+</body>
 </html>
