--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	<!--Start Hero Section-->
 	<div class="img-container">
 		<div class="inner-container">
+			<img src="https://images.pexels.com/photos/1018133/pexels-photo-1018133.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
 			<h1>Mikeala Francis</h1>
 			<p>Graphic/Web Designer</p>
 			<a class="btn" href="img/resume.pdf" download="resume.pdf">Download Resume</a>
