--- a/gypsy.html
+++ b/gypsy.html
@@ -57,7 +57,7 @@
 						<li><span>Class</span><p>Design Team Pre-Production</p></li>
 						<li><span>Year</span><p>2018</p></li>
 					</ul>
-					<a href="mikealafrancis.me/GYPSYIncentive/index.html" class="btn" target="_blank">View Website</a>
+					<a href="GYPSYIncentive/index.html" class="btn" target="_blank">View Website</a>
 				</div>
 			</div>
 		</div>
