--- a/pola.html
+++ b/pola.html
@@ -57,7 +57,7 @@
 						<li><span>Class</span><p>N/A</p></li>
 						<li><span>Year</span><p>2018</p></li>
 					</ul>
-					<a href="POLA/index.html" class="btn">View Website</a>
+					<a href="POLA/index.html" class="btn" target="_blank">View Website</a>
 				</div>
 			</div>
 		</div>
