--- a/hope.html
+++ b/hope.html
@@ -61,7 +61,7 @@
 						<li><span>Year</span><p>2015</p></li>
 					</ul>
 					<a href="portfolio.html" class="btn">Back to Portfolio</a>
-					<a href="HopeMovement/index.html" class="btn">View Website</a>
+					<a href="HopeMovement/index.html" class="btn" target="_blank">View Website</a>
 				</div>
 			</div>
 		</div>
