--- a/portfolio.html
+++ b/portfolio.html
@@ -188,16 +188,20 @@
 		<span class="title">Web Design</span>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-3">
 					<a href="gypsy.html"><img src="img/gypsy.png"></a>
 					<a class="btn" href="#">Click Logo to View</a>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-3">
 					<a href="hope.html"><img src="img/hope-logo.png"></a>
 					<a class="btn" href="#">Click Logo to View</a>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-3">
 					<a href="pola.html"><img src="img/pola.png"></a>
+					<a class="btn" href="#">Click Logo to View</a>
+				</div>
+				<div class="col-md-3">
+					<a href="maggie.html"><img src="img/bakery-logo.png"></a>
 					<a class="btn" href="#">Click Logo to View</a>
 				</div>
 			</div>
