--- a/gypsy.html
+++ b/gypsy.html
@@ -39,6 +39,7 @@
 				<li><a class="active" href="gypsy.html">Gypsy Incentive</a></li>
 				<li><a href="hope.html">Hope Movement</a></li>
 				<li><a href="pola.html">Pola Photography</a></li>
+				<li><a href="maggie.html">Maggie's Bakery</a></li>
 			</ul>
 		</nav>
 	</header>
