--- a/angostura.html
+++ b/angostura.html
@@ -117,6 +117,7 @@
 						<li><a href="gypsy.html">Gypsy Incentive</a></li>
 						<li><a href="hope.html">Hope Movement</a></li>
 						<li><a href="pola.html">Pola Photography</a></li>
+						<li><a href="maggie.html">Maggie's Bakery</a></li>
 					</ul>
 				</div>
 			</div>
