--- a/maggie.html
+++ b/maggie.html
@@ -47,9 +47,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
-					<h1>Maggie's Bakeryy</h1>
+					<h1>Maggie's Bakery</h1>
 					<div class="desc">
-						<span><p>Develop a logo for a non-existing company..</p></span>
+						<span><p>Develop a logo for a non-existing company.</p></span>
 						<p>Maggie's Bakery is a family-owned bakery located in Greenwich Village where young men and women can indulge in treats varying from cakes to pies..</p>
 					</div>
 				</div>
