--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="col-lg-12">
 					<h1>Mikeala Francis</h1>
 					<p>Graphic/Web Designer</p>
-					<a class="btn" href="img/resume.pdf" download="resume.pdf">Download Resume</a>
+					<a class="btn" href="img/resume.pdf" target="_blank" download="resume.pdf">Download Resume</a>
 				</div>
 			</div>
 		</div>
