--- a/trini-seaway.html
+++ b/trini-seaway.html
@@ -71,7 +71,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<img src="img/trini-page-1.jpg">
-					<img src="img/Trini-page-2.jpg">
+					<img src="img/trini-page-2.jpg">
 				</div>
 				<div class="col-md-12">
 					<img src="img/trini-mood.jpg">
