--- a/gypsy.html
+++ b/gypsy.html
@@ -116,6 +116,7 @@
 						<li><a href="hope.html">Hope Movement</a></li>
 						<li><a href="pola.html">Pola Photography</a></li>
 						<li><a href="maggie.html">Maggie's Bakery</a></li>
+						<li><a href="miamivirtuosi.html">Miami Virtuosi</a></li>
 					</ul>
 				</div>
 			</div>
