--- a/maggie.html
+++ b/maggie.html
@@ -40,6 +40,7 @@
 				<li><a href="hope.html">Hope Movement</a></li>
 				<li><a href="pola.html">Pola Photography</a></li>
 				<li><a class="active" href="maggie.html">Maggie's Bakery</a></li>
+				<li><a href="miamivirtuosi.html">Miami Virtuosi</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -115,7 +116,8 @@
 						<li><a href="gypsy.html">Gypsy Incentive</a></li>
 						<li><a href="hope.html">Hope Movement</a></li>
 						<li><a href="pola.html">Pola Photography</a></li>
-            <li><a href="maggie.html">Maggie's Bakery</a></li>
+            					<li><a href="maggie.html">Maggie's Bakery</a></li>
+						<li><a href="miamivirtuosi.html">Miami Virtuosi</a></li>
 					</ul>
 				</div>
 			</div>
