--- a/pola.html
+++ b/pola.html
@@ -40,6 +40,7 @@
 				<li><a href="hope.html">Hope Movement</a></li>
 				<li><a class="active" href="pola.html">Pola Photography</a></li>
 				<li><a href="maggie.html">Maggie's Bakery</a></li>
+				<li><a href="miamivirtuosi.html">Miami Virtuosi</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -116,6 +117,7 @@
 						<li><a href="hope.html">Hope Movement</a></li>
 						<li><a href="pola.html">Pola Photography</a></li>
 						<li><a href="maggie.html">Maggie's Bakery</a></li>
+						<li><a href="miamivirtuosi.html">Miami Virtuosi</a></li>
 					</ul>
 				</div>
 			</div>
