--- a/miamivirtuosi.html
+++ b/miamivirtuosi.html
@@ -36,10 +36,10 @@
 	<header>
 		<nav class="menu">
 			<ul>
-				<li><a class="active" href="gypsy.html">Gypsy Incentive</a></li>
+				<li><a href="gypsy.html">Gypsy Incentive</a></li>
 				<li><a href="hope.html">Hope Movement</a></li>
 				<li><a href="pola.html">Pola Photography</a></li>
-				<li><a href="miamivirtuosi.html">Miami Virtuosi</a></li>
+				<li><a class="active" href="miamivirtuosi.html">Miami Virtuosi</a></li>
 			</ul>
 		</nav>
 	</header>
