--- a/portfolio.html
+++ b/portfolio.html
@@ -205,6 +205,12 @@
 					<a class="btn" href="#">Click Logo to View</a>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-3">
+					<a href="miamivirtuosi.html"><img src="img/miamivirtuosi.png"></a>
+					<a class="btn" href="#">Click Logo to View</a>
+				</div>
+			</div>
 		</div>
 	</section></a>
 
