--- a/gypsy.html
+++ b/gypsy.html
@@ -207,8 +207,8 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<p>&copy; Mikeala Francis 2018.</p>
-							<div> <a class="social-icon color-bg-icon round-icon socicon-facebook" href="#" title="Facebook"></a> <a class="social-icon color-bg-icon round-icon socicon-instagram"
-								    href="#" title="Instagram"></a> </div>
+							<div> <a class="social-icon color-bg-icon round-icon socicon-facebook" href="https://www.facebook.com/profile.php?id=100008913274156" title="Facebook"></a> <a class="social-icon color-bg-icon round-icon socicon-instagram"
+								    href="https://www.instagram.com/mikealafran96/" title="Instagram"></a> </div>
 						</div>
 					</div>
 				</div>
