--- a/photography.html
+++ b/photography.html
@@ -254,7 +254,7 @@
 						</div>
 					</div>
 				</div>
-				<<div class="header_center_buttons display_table_cell text-center hidden-xs"> <a href="index.html#portfolio" class="theme_button inverse min_width_button">Back to Portfoliob</a> </div>
+				<div class="header_center_buttons display_table_cell text-center hidden-xs"> <a href="index.html#portfolio" class="theme_button inverse min_width_button">Back to Portfolio</a> </div>
 			</section>
 			<footer id="contact" class="page_footer ds section_padding_top_100 section_padding_bottom_100 columns_padding_25">
 				<div class="container">
@@ -284,8 +284,8 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<p>&copy; Mikeala Francis 2018.</p>
-							<div> <a class="social-icon color-bg-icon round-icon socicon-facebook" href="#" title="Facebook"></a> <a class="social-icon color-bg-icon round-icon socicon-instagram"
-								    href="#" title="Instagram"></a> </div>
+							<div> <a class="social-icon color-bg-icon round-icon socicon-facebook" href="https://www.facebook.com/profile.php?id=100008913274156" title="Facebook"></a> <a class="social-icon color-bg-icon round-icon socicon-instagram"
+								    href="https://www.instagram.com/mikealafran96/" title="Instagram"></a> </div>
 						</div>
 					</div>
 				</div>
