--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 									</div>
 									<div class="item-content cs">
 										<h3 class="entry-title bottommargin_0"> <a href="#">Web Design</a> </h3>
-										<p class="small-text bottommargin_0"> HTML/CSS</p>
+										<p class="small-text bottommargin_0" style="color:#fff;"> HTML/CSS</p>
 									</div>
 								</div>
 								<div class="vertical-item content-absolute hover-entry-content">
@@ -151,7 +151,7 @@
 									</div>
 									<div class="item-content cs">
 										<h3 class="entry-title bottommargin_0"> <a href="#">Adobe Cloud</a> </h3>
-										<p class="small-text bottommargin_0">Photoshop, Illustrator, Indesign, After Effects</p>
+										<p class="small-text bottommargin_0"  style="color:#fff;">Photoshop, Illustrator, Indesign, After Effects</p>
 									</div>
 								</div>
 								<div class="vertical-item content-absolute hover-entry-content">
@@ -159,7 +159,7 @@
 									</div>
 									<div class="item-content cs">
 										<h3 class="entry-title bottommargin_0"> <a href="#">Brand Design</a> </h3>
-										<p class="small-text bottommargin_0">Logo Development, Corporate Identity</p>
+										<p class="small-text bottommargin_0"  style="color:#fff;">Logo Development, Corporate Identity</p>
 									</div>
 								</div>
 								<div class="vertical-item content-absolute hover-entry-content">
