--- a/gypsy.html
+++ b/gypsy.html
@@ -113,7 +113,7 @@
 							<article class="single-post vertical-item content-padding big-padding with_background post  overflow_hidden">
 								<div class="header_right_buttons display_table_cell text-right hidden-xs"> <a href="/GYPSYIncentive/index.html" target="_blank" class="theme_button inverse min_width_button to_animate" data-animation="fadeInLeft" data-delay="25">View Website</a> </div>
 								<div class="header_right_buttons display_table_cell text-right hidden-xs"> 
-									<a href="https://xd.adobe.com/view/da0f56a1-b622-4895-5248-c792aeca9256-ac3e/?hints=off" class="theme_button inverse min_width_button to_animate" data-animation="fadeInLeft" data-delay="25">View App</a> 
+									<a href="https://xd.adobe.com/view/da0f56a1-b622-4895-5248-c792aeca9256-ac3e/" class="theme_button inverse min_width_button to_animate" data-animation="fadeInLeft" data-delay="25">View App</a> 
 								</div>
 								<div class="entry-thumbnail item-media"> <img src="images/gallery/gypsy.jpg" alt=""> </div>
 								<div class="item-content">
