--- a/gypsy.html
+++ b/gypsy.html
@@ -166,6 +166,7 @@
 									</div>
 								</div>
 							</div>
+							<div class="header_center_buttons display_table_cell text-center hidden-xs"> <a href="apps.html" class="theme_button inverse min_width_button">Back to Apps</a> </div>
 							<div class="header_center_buttons display_table_cell text-center hidden-xs"> <a href="web.html" class="theme_button inverse min_width_button">Back to Web</a> </div>
 						</div>
 						<!--eof .col-sm-8 (main content)-->
