--- a/astral.html
+++ b/astral.html
@@ -146,7 +146,7 @@
 									<!-- .entry-content -->
 								</div>
 								<!-- .item-content -->
-							</article>
+							</article><br><br>
 							<div class="header_center_buttons display_table_cell text-center hidden-xs"> <a href="apps.html" class="theme_button inverse min_width_button">Back to Apps</a> </div>
 						</div>
 						
