--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						<div class="col-md-6">
 							<h2 class="section_header">About Me</h2>
 							<p style="color: #000;">Graphic and web design student at Miami International University of Art and Design. I am skilled in Photoshop,Illustrator,Indesign and After Effects. I am also skilled in HTML/CSS.</p><br>
-							<div class="header_center_buttons display_table_cell text-center hidden-xs"> <a href="documents/Resume.pdf" class="theme_button inverse min_width_button" target="_blank">View Resume</a> </div>
+							<div> </div>
 						</div>
 					</div>
 				</div>
