--- a/print.html
+++ b/print.html
@@ -64,7 +64,7 @@
 	<!-- wrappers for visual page editor and boxed version of template -->
 	<div id="canvas">
 		<div id="box_wrapper">
-			<!-- template sections -->>
+			<!-- template sections -->
 			<header class="page_header header_darkgrey header_transparent toggler_xs_right tall_header">
 				<div class="container-fluid">
 					<div class="row">
